@@ -1,3 +1,7 @@
+2013-10-15  Ramon Novoa  <rnovoa@artica.es>
+
+	* pandoradb_data.sql: Added more network components.
+
 2013-10-14 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* operation/events/events.build_query.php,
